Fix alignment of custom fields in selfservice
Fix alignment of custom fields in self-service ticket creation

--- a/share/static/css/elevator-light/ticket-form.css
+++ b/share/static/css/elevator-light/ticket-form.css
@@ -1,5 +1,6 @@
 #ticket-create-metadata .cflabel .name,
-#ticket-update-metadata .cflabel .name {
+#ticket-update-metadata .cflabel .name,
+#ticket-info-basics .cflabel .name {
     font-weight: normal;
 }
 
